[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://home/create_project_screen.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://login/components/button.tscn" id="2_btn"]

[node name="CreateProjectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
min_size = Vector2(400, 0)

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Novo Projeto"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Nome do Projeto"

[node name="DescriptionInput" type="TextEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Descrição"

[node name="CreateButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2_btn")]
layout_mode = 2
text = "Criar"

[node name="BackButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2_btn")]
layout_mode = 2
text = "Voltar"
